# fossbeamer

./: .envrc  .gitignore  Cargo.nix  Cargo.toml  README.md  build.rs  default-config.json  treefmt.toml
.github/workflows/: CI.yaml
nix/: configuration-bar.nix  configuration-bornfurs.nix  configuration-cm3.nix  configuration.nix  default.nix  deployment.nix  fossbeamer.nix  overlay.nix  sources.json
nix/modules/: fossbeamer.nix
nix/profiles/: cm3.nix  grafana-alloy.nix  kiosk.nix  networking.nix  ssh-server.nix
src/: browser.rs  common.rs  config.rs  error.rs  lib.rs  listener.rs  main.rs  mqtt.rs  system.rs
src/display/: drm.rs  mod.rs
