[package]
name = "fossbeamer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
rumqttc = "0.24.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tao = "0.28.1"
wry = "0.41.0"

# FUTUREWORK: Somehow rustc wants to link this against zlib.
# Properly declare a system dependency to zlib and have pkg-config discover it.
# This fixes incremental `cargo build` invocations.
[build-dependencies]
system-deps = "2.0"

[package.metadata.system-deps]
zlib = "*"
