[package]
name = "fossbeamer"
version = "0.1.0"
edition = "2021"

[dependencies]
bstr = "1.9.1"
clap = { version = "4.5.9", features = ["derive"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
rumqttc = "0.24.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tao = "0.28.1"
thiserror = "1.0.62"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v4"] }
wry = "0.41.0"

# FUTUREWORK: Somehow rustc wants to link this against zlib.
# Properly declare a system dependency to zlib and have pkg-config discover it.
# This fixes incremental `cargo build` invocations.
[build-dependencies]
system-deps = "2.0"

[package.metadata.system-deps]
zlib = "*"
